fix css bleed

--- a/src/flows/onboarding/followInfluencer/style.scss
+++ b/src/flows/onboarding/followInfluencer/style.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/variables";
 
-.follow-container {
+.onboarding-follow-container {
     max-height: 400px;
     overflow: scroll;
     padding: $base-spacing 0;
